compiler/tests/success/tunneling/x86-64/tunneling.jazz
export fn test (reg u64 x) -> reg u64 {
  reg u64 r;
  r=x;
  if (r>5) {if (r>6) {} else {}} else {if (r>2) {} else {}}
  return r;
}
